--- a/bib/subs.bib
+++ b/bib/subs.bib
@@ -1,4 +1,24 @@
 
+@InProceedings{agate,
+  title = {},
+  }
+  
+@InProceedings{demikernel,
+  title = {Demikernel: An Operating System Architecture for Kernel-Bypass Networking in Datacenter Servers},
+  author = {Irene Zhang and Jing Liu and Amanda Austin and Anna Kornfeld Simpson and Michael Lowell Roberts and Anirudh Badam},
+  month = 10,
+  year = 2020,
+  booktitle = submission,
+  abstract = {}}
+
+@InProceedings{meerkat,
+  author = {Adriana Szekeres and Michael Whittaker and Naveen Kr. Sharma and Jialin Li and Irene Zhang and Dan R. K. Ports},
+  month = 4,
+  title = {Meerkat: Scalable Replicated Transactions Following the Zero-Coordination Principle},
+  year = 2020,
+  booktitle = submission,
+  abstract = {}}
+
 @InProceedings{hercules,
   author =        { Niel Lebeck and Jonathan Goldstein and Irene Zhang},
   month =         8,
