updates to paper and pc

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -22,6 +22,7 @@
   title = {Meerkat: Scalable Replicated Transactions Following the Zero-Coordination Principle},
   year = 2020,
   booktitle = eurosys,
+    url = {papers/meerkat-eurosys20.pdf},
   abstract = {Traditionally, the high cost of network communication
                   between servers has hidden the impact of cross-core
                   coordination in replicated systems. However, new
@@ -42,7 +43,8 @@
                   an improvement of 12x on state-of-the
                   art, fault-tolerant, in-memory, transactional
                   storage systems built using leader-based replication
-                  and a shared transaction log.  }}
+                  and a shared transaction log.  }
+                  }
 
 
 @TechReport{hercules-tr,
@@ -142,7 +144,9 @@ url={papers/ambrosia-vldb19.pdf} }
                   that provide a uniform address space across the x86
                   and ARM cores and expose a virtual NVMe storage to
                   unmodified guest VMs, with a competitive speed to
-                  bare-metal performance.}}
+                  bare-metal performance.},
+                  url={papers/leap-asplos20.pdf},
+                  talk={https://www.youtube.com/watch?v=Gyn9eABQwTQ&list=PLsLWHLZB96VeVp3IVzvSH58ttVz_Anr7H&index=26&t=0s}}
 
 
 @Article{tapir-tocs,
