--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -14,6 +14,38 @@
 @string{submission = "Submission"}
 @string{asplos = "Proceedings of the International Conference on Architectural Support for  Programming Languages and Operating Systems (ASPLOS)"}
 
+@InProceedings{marvin_atc,
+  author =        {Niel Lebeck and Arvind Krishnamurthy and Henry M. Levy and Irene Zhang},
+  month =         7,
+  year =          2020,
+  booktitle = usenix_atc,
+  title =         {End the Senseless Killing: Improving Memory Management for Mobile Operating Systems},
+  abstract =      {To ensure low-latency memory allocation, mobile
+                  operating systems needing memory kill applications
+                  instead of swapping memory to disk.  This design
+                  choice shifts the burden of managing over-utilized
+                  memory to application programmers, requiring them to
+                  constantly checkpoint their application state to
+                  disk. This paper presents Marvin, a new memory
+                  manager for mobile platforms that efficiently
+                  supports swapping while meeting the strict
+                  performance requirements of mobile apps.  Marvin's
+                  swap-enabled language runtime is co-designed with
+                  OS-level memory management to avoid common pitfalls
+                  of traditional swap mechanisms. Its three key
+                  features include: (1) a new swap mechanism, called
+                  ahead-of-time (AOT) swap, which pre-writes
+                  memory to disk, then harvests it quickly when
+                  needed, (2) a modified bookmarking garbage collector
+                  that avoids swapping in unused memory, and (3) an
+                  object-granularity working set estimator. Our
+                  experiments show that Marvin can run more than 2x as
+                  many concurrent apps as Android, and that Marvin can
+                  reclaim memory over 60x faster than Android with a
+                  Linux swap file can allocate memory under memory
+                  pressure.  }}
+
+
 @InProceedings{meerkat,
   author = {Adriana Szekeres and Michael Whittaker and Naveen
                   Kr. Sharma and Jialin Li and Arvind Krishnamurthy
