adding hotcloud paper

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -14,6 +14,14 @@
 @string{submission = "Submission"}
 @string{asplos = "Proceedings of the International Conference on Architectural Support for  Programming Languages and Operating Systems (ASPLOS)"}
 
+@InProceedings{rdma_sec_hotcloud,
+  author =        {Anna Simpson and Adriana Szekeres and Jacob Nelson and Irene Zhang},
+  month =         7,
+  year =          2020,
+  booktitle = hotcloud,
+  title =         {Securing RDMA for High-Performance Datacenter Storage Systems},
+  abstract = {RDMA is increasingly popular for low-latency communication in datacenters, marking a major change in how we build distributed systems. Unfortunately, as we pursue significant system re-designs inspired by new technology, we have not given equal thought to the consequences for system security. This paper investigates security issues introduced to datacenter systems by switching to RDMA and challenges in building secure RDMA systems. These challenges include changes in RPC reliability guarantees and unauditable data-accesses. We show how RDMA's design makes it challenging to build secure storage systems by analyzing recent research systems; then we outline several directions for solutions and future research, with the goal of securing RDMA datacenter systems while they are still in the research and prototype stages.}}
+
 @InProceedings{marvin_atc,
   author =        {Niel Lebeck and Arvind Krishnamurthy and Henry M. Levy and Irene Zhang},
   month =         7,
