updating meerkat title

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -59,7 +59,7 @@
                   Kr. Sharma and Jialin Li and Arvind Krishnamurthy
                   and Irene Zhang and Dan R. K. Ports},
   month = 4,
-  title = {Meerkat: Scalable Replicated Transactions Following the Zero-Coordination Principle},
+  title = {Meerkat: Multicore-scalable Replicated Transactions Following the Zero-Coordination Principle},
   year = 2020,
   booktitle = eurosys,
     url = {papers/meerkat-eurosys20.pdf},
