--- a/_posts/2021-6-5-hints.md
+++ b/_posts/2021-6-5-hints.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 shortnews: false
-title: How to write an SOSP paper
+title: Hints on how to write an SOSP paper
 ---
 
 After reviewing between 50-100 papers per year for the last few years,
