new blog post on superhero network

--- a/_posts/2021-6-5-hints.md
+++ b/_posts/2021-6-5-hints.md
@@ -17,7 +17,7 @@ A useful exercise is to summarize each of these parts of your paper
 (i.e., the why, the how and the results), which can then be turned
 into the conclusion.
 
-### Intro, Background and Motivation
+### The Why: Intro, Background and Motivation
 * The goal of a systems paper is generally to state a thesis and
   demonstrate that thesis through a software (or hardware) prototype
   and series of experiments.  For example, "this paper proposes that X
@@ -30,13 +30,14 @@ into the conclusion.
   of the paper extremely difficult to understand!!
   
 * Clearly motivate Y and Z.  Why is application Y important?  Why
-  should we assume that Y commonly runs in Z?
+  should is it ok to assume that Y commonly runs in Z?
   
 * Clearly state why X is novel.  In very few cases is it only X that
   is new (unless you have some new super smart algorithm).  Instead,
   many systems papers are about a new application Y (the hot one now
-  being ML) or Z (being some new hardware or deployment).  This is
-  your chance to teach the community about an exciting new Y or Z.
+  being ML workloads) or Z (being some new hardware, like NVRam, or
+  deployment environment, like mobile devices).  This is your chance
+  to teach the community about an exciting new Y or Z!
   
 * *Bonus:* What is the lesson to be learned from X? This is an extra
   level that many papers miss.  Is there a broader lesson to be
@@ -49,20 +50,19 @@ into the conclusion.
   it does not wind up in the paper to make sure that we all understand
   the related work clearly.
 
-### The System
+### The How: System Design
 * Now you can get down to talking about X.  Clearly state Y and Z
   again and use a figure to show where X fits.  Do not assume that
   this is obvious!
   
 * It might be relevant to discuss how X interacts with Y and Z,
-  especially if it is different.
+  especially if it is different.  For example, if X has a new API or
+  new operations for Y or has new requirements for Z, summarizing
+  these in a table is important.
 
 * If X introduces a lot of new terminology, a table that summarizes
   and defines the new terms is important.  It is easy to miss these
   definitions in the text.
-
-* If X has a new API or new operations for Y or has new requirements
-  for Z, summarizing these in a table again helps with readability.
 
 * Every design choice made in X should be discussed with alternatives.
   Almost all design choices come with trade-offs. Do not only talk
@@ -72,13 +72,12 @@ into the conclusion.
 * Some problems might be out of scope. Clearly state what X does not
   handle and *justify why*. Do not assume that reviewers can guess.
   
-### The Results
+### The Results: Implementation and Evaluation
 * Explain how you constructed a prototype system to test your
-  hypothesis that X is better for Y on Z.  This prototype might
-  exactly match your design or there might be reasons why it cannot.
-  It likely does not implement all of X thoroughly but the parts of X
-  that are needed to test your hypothesis, clearly state the parts
-  that are implemented.
+  hypothesis.  This prototype might exactly match X or there might be
+  reasons why it cannot.  It likely does not implement all of X
+  thoroughly but the parts of X that are needed to test your
+  hypothesis, so clearly state the parts that are implemented.
 
 * Clearly state the set up for every experiment. So many papers miss
   this.  How many times did you run the experiment? For how long?
@@ -86,7 +85,7 @@ into the conclusion.
 
 * Every experiment should have a point; that is, each subsection and
   graph should have a concrete conclusion that contributes to
-  demonstrating your hypothesis.  
+  demonstrating your hypothesis.
   
 * Clearly state each conclusion 3 times: at the beginning of the
   section as a hypothesis (e.g., this experiment will show), at the
@@ -103,8 +102,8 @@ into the conclusion.
   hypothesis. 
   
 * The second breaks down the performance (or other metric) impact for
-  each design decision and potential alternative design.  Many papers
-  fail to include these but they are really important for
+  each design decision and potential alternative design(s).  Many
+  papers fail to include these but they are really important for
   understanding which parts of the system are fundamentally important
   to your hypothesis.
 
