adding SOSP papers

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -15,6 +15,39 @@
 @string{asplos = "Proceedings of the International Conference on Architectural Support for  Programming Languages and Operating Systems (ASPLOS)"}
 @string{acsac = "Annual Computer Security Applications Conference (ACSAC)"}
 
+@InProceedings{irene_demikernel_sosp,
+  author = {Irene Zhang and Amanda Raybuck and Pratyush Patel and Kirk
+                  Olynyk and Jacob Nelson and Ashlie Martinez and Jing
+                  Liu and Omar S. Navarro Leija and Anna Kornfeld
+                  Simpson and Sujay Jayakar and Pedro Henrique Penna
+                  and Max Demoulin and Piali Choudhury and and Anirudh
+                  Badam},
+  month =         10,
+  year =          2021,
+  booktitle = sosp,
+  title =         {The Demikernel Library OS Architecture for Microsecond Datacenter Systems}}
+
+@InProceedings{max_sosp_persephone,
+  author = {Max Demoulin and Josh Fried and Isaac Pedisich and Marios
+                  Kogias and Boon Thau Loo and Linh Thi Xuan Phan and
+                  Irene Zhang},
+  month =         10,
+  year =          2021,
+  booktitle = sosp,
+  title =         {When Idling is Ideal: Optimizing Tail-Latency for Highly-Dispersed Datacenter Workloads with Persephone}
+                  }
+
+@InProceedings{sowmya_sosp_prism,
+  author = {Sowmya Dharanipragada and Shannon Joyner and Matthew Burke
+                  and Adriana Szekeres and Jacob Nelson and Irene
+                  Zhang and Dan Ports},
+  month =         10,
+  year =          2021,
+  booktitle = sosp,
+  title =         {PRISM: Rethinking the RDMA Interface for Distributed Systems}
+                  }
+
+
 @InProceedings{ray_acsac_talek,
   author =        {Raymond Cheng and William Scott and Elisaweta
                   Masserova and Irene Zhang and Vipul Goyal and Thomas
@@ -52,6 +85,9 @@
                   users to learn, without polling, which logs have new
                   messages.},
                   url={papers/talek-acsac20.pdf} }
+
+
+
 @InProceedings{wen_osdi_persimmon,
   author =        {Wen Zhang and Scott Shenker and Irene Zhang},
   month =         11,
