updating hotos talk

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -17,8 +17,8 @@
 
 @InProceedings{irene_demikernel_sosp,
   author = {Irene Zhang and Amanda Raybuck and Pratyush Patel and Kirk
-                  Olynyk and Jacob Nelson and Ashlie Martinez and Jing
-                  Liu and Omar S. Navarro Leija and Anna Kornfeld
+                  Olynyk and Jacob Nelson and Omar S. Navarro Leija
+                  and Ashlie Martinez and Jing Liu and Anna Kornfeld
                   Simpson and Sujay Jayakar and Pedro Henrique Penna
                   and Max Demoulin and Piali Choudhury and and Anirudh
                   Badam},
@@ -443,7 +443,8 @@ code={https://github.com/UWSysLab/tapir}
                   capabilities efficiently for a wide variety of
                   non-uniform data structures, making application
                   memory available for zero-copy I/O, and ensuring
-                  memory safety. }}
+                  memory safety. },
+                  talk = {https://youtu.be/IF0H6dHYL8U?list=PLl-7Fg11LUZe_6cCrz6sVvTbE_8SEobNB}}
 
 
 @InProceedings{demikernel-hotos,
