adding wen's talk

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -107,7 +107,8 @@
                   existing distributed in-memory storage systems into
                   persistent, crash-consistent versions with low
                   overhead and minimal code changes.},
-                  url={papers/persimmon-osdi20.pdf} 
+                  url={papers/persimmon-osdi20.pdf},
+                  talk = {https://www.youtube.com/watch?v=yAnkRRPbhsM}
                   }
 
 
