uploading camera-readies

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -25,7 +25,8 @@
   month =         10,
   year =          2021,
   booktitle = sosp,
-  title =         {The Demikernel Library OS Architecture for Microsecond Datacenter Systems}}
+  title =         {The Demikernel Library OS Architecture for Microsecond Datacenter Systems},
+  url = {papers/demikernel-sosp21.pdf}}
 
 @InProceedings{max_sosp_persephone,
   author = {Max Demoulin and Josh Fried and Isaac Pedisich and Marios
@@ -34,7 +35,8 @@
   month =         10,
   year =          2021,
   booktitle = sosp,
-  title =         {When Idling is Ideal: Optimizing Tail-Latency for Highly-Dispersed Datacenter Workloads with Persephone}
+  title =         {When Idling is Ideal: Optimizing Tail-Latency for Highly-Dispersed Datacenter Workloads with Persephone},
+  url = {papers/persephone-sosp21.pdf}
                   }
 
 @InProceedings{sowmya_sosp_prism,
@@ -44,8 +46,8 @@
   month =         10,
   year =          2021,
   booktitle = sosp,
-  title =         {PRISM: Rethinking the RDMA Interface for Distributed Systems}
-                  }
+  title =         {PRISM: Rethinking the RDMA Interface for Distributed Systems},
+  url = {papers/prism-sosp21.pdf}}
 
 
 @InProceedings{ray_acsac_talek,
